# libparserutils

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE
include/parserutils/input/: inputstream.h
src/charset/codecs/: codec_8859.c  codec_ascii.c  codec_ext8.c  codec_utf16.c  codec_utf8.c
src/input/: filter.c  inputstream.c
src/utils/: buffer.c
test/: cscodec-utf16.c
